--- a/tutorial_notebook_3Dspins.ipynb
+++ b/tutorial_notebook_3Dspins.ipynb
@@ -11,72 +11,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "***Using Julia 1.9.3 version on macOS Sonoma 14.0, Apple M1 Pro chip.***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Install the necessary packages if not already done:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m\u001b[1m    Updating\u001b[22m\u001b[39m registry at `~/.julia/registries/General.toml`\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m\u001b[1m   Resolving\u001b[22m\u001b[39m package versions...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/.julia/environments/v1.9/Project.toml`\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/.julia/environments/v1.9/Manifest.toml`\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m\u001b[1m   Resolving\u001b[22m\u001b[39m package versions...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/.julia/environments/v1.9/Project.toml`\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/.julia/environments/v1.9/Manifest.toml`\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m\u001b[1m   Resolving\u001b[22m\u001b[39m package versions...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/.julia/environments/v1.9/Project.toml`\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/.julia/environments/v1.9/Manifest.toml`\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "using Pkg\n",
-    "Pkg.add(\"GLMakie\")\n",
-    "Pkg.add(\"GeometryBasics\")\n",
-    "Pkg.add(\"Colors\")"
+    "# using Pkg\n",
+    "# Pkg.add(\"GLMakie\")\n",
+    "# Pkg.add(\"GeometryBasics\")\n",
+    "# Pkg.add(\"Colors\")"
    ]
   },
   {
@@ -88,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,13 +75,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Par(2, 1.0, 1.0, 0.7853981633974483)"
+       "Par(3, 1.0, 1.0, 0.7853981633974483)"
       ]
      },
      "metadata": {},
@@ -142,7 +96,7 @@
     "    β::Float64    # angle spins make with the x axis \n",
     "end\n",
     "\n",
-    "C = Par(2, 1.0, 1.0, π/4)"
+    "C = Par(3, 1.0, 1.0, π/4)"
    ]
   },
   {
@@ -161,13 +115,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "get_spin_centers (generic function with 2 methods)"
+       "get_spin_centers (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -179,10 +133,10 @@
     "\n",
     "    # generate a periodic lattice of points\n",
     "\n",
-    "    # side length in terms of J spacing l = (2(N+1)-1)J, \n",
+    "    # side length l in terms of J spacing\n",
     "    # l is the distance from outermost spin centers on each side\n",
-    "\n",
-    "    l = (2(C.N + 1) - 1) * C.J\n",
+    "    \n",
+    "    l = (2C.N - 1) * C.J\n",
     "\n",
     "    spin_centers = Vector{Float64}[]\n",
     "    \n",
@@ -198,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -239,89 +193,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Generate a **random** spin configuration."
+    "Generate an **ordered** spin configuration."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "create_random_config (generic function with 2 methods)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "function create_random_config(C::Par)\n",
-    "\n",
-    "    num_spins = ((C.N + 1) * 2)^2\n",
-    "\n",
-    "    μ_hat = Vector{Float64}[]\n",
-    "\n",
-    "    for i = 1:num_spins\n",
-    "\n",
-    "        push!(μ_hat, C.L .* [rand([1, -1])*cos(C.β), rand([1, -1])*sin(C.β), 0.0])\n",
-    "\n",
-    "    end\n",
-    "\n",
-    "    return μ_hat\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "36-element Vector{Vector{Float64}}:\n",
-       " [-0.7071067811865476, 0.7071067811865475, 0.0]\n",
-       " [0.7071067811865476, -0.7071067811865475, 0.0]\n",
-       " [0.7071067811865476, -0.7071067811865475, 0.0]\n",
-       " [0.7071067811865476, 0.7071067811865475, 0.0]\n",
-       " [0.7071067811865476, 0.7071067811865475, 0.0]\n",
-       " [0.7071067811865476, 0.7071067811865475, 0.0]\n",
-       " [-0.7071067811865476, -0.7071067811865475, 0.0]\n",
-       " [-0.7071067811865476, -0.7071067811865475, 0.0]\n",
-       " [-0.7071067811865476, 0.7071067811865475, 0.0]\n",
-       " [0.7071067811865476, 0.7071067811865475, 0.0]\n",
-       " ⋮\n",
-       " [0.7071067811865476, 0.7071067811865475, 0.0]\n",
-       " [0.7071067811865476, -0.7071067811865475, 0.0]\n",
-       " [-0.7071067811865476, -0.7071067811865475, 0.0]\n",
-       " [0.7071067811865476, -0.7071067811865475, 0.0]\n",
-       " [-0.7071067811865476, -0.7071067811865475, 0.0]\n",
-       " [-0.7071067811865476, -0.7071067811865475, 0.0]\n",
-       " [-0.7071067811865476, 0.7071067811865475, 0.0]\n",
-       " [0.7071067811865476, -0.7071067811865475, 0.0]\n",
-       " [0.7071067811865476, -0.7071067811865475, 0.0]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "μ_hat_rand = create_random_config(C)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "create_T2_config (generic function with 2 methods)"
+       "create_T2_config (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -337,13 +220,13 @@
     "    spin_3, spin_4 = spin_2, spin_1\n",
     "\n",
     "    # number of columns in the lattice (it is also a # of spins per side)\n",
-    "    columns = 2(C.N + 1)\n",
+    "    columns = 2C.N\n",
     "\n",
     "    μ_hat = Vector{Float64}[]\n",
     "\n",
     "    for col = 1:columns\n",
     "        spins = isodd(col) ? [spin_1, spin_2] : [spin_3, spin_4]\n",
-    "        append!(μ_hat, repeat(spins, C.N + 1))\n",
+    "        append!(μ_hat, repeat(spins, C.N))\n",
     "    end\n",
     "\n",
     "    return μ_hat\n",
@@ -352,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -390,73 +273,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 62,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "36-element Vector{Point{3, Float32}}:\n",
-       " [-2.5, 2.5, 0.0]\n",
-       " [-2.5, 1.5, 0.0]\n",
-       " [-2.5, 0.5, 0.0]\n",
-       " [-2.5, -0.5, 0.0]\n",
-       " [-2.5, -1.5, 0.0]\n",
-       " [-2.5, -2.5, 0.0]\n",
-       " [-1.5, 2.5, 0.0]\n",
-       " [-1.5, 1.5, 0.0]\n",
-       " [-1.5, 0.5, 0.0]\n",
-       " [-1.5, -0.5, 0.0]\n",
-       " ⋮\n",
-       " [1.5, -0.5, 0.0]\n",
-       " [1.5, -1.5, 0.0]\n",
-       " [1.5, -2.5, 0.0]\n",
-       " [2.5, 2.5, 0.0]\n",
-       " [2.5, 1.5, 0.0]\n",
-       " [2.5, 0.5, 0.0]\n",
-       " [2.5, -0.5, 0.0]\n",
-       " [2.5, -1.5, 0.0]\n",
-       " [2.5, -2.5, 0.0]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
-    "spin_center = [Point3f(i) for i in spin_centers]"
+    "Generate a **random** spin configuration."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "36-element Vector{Vec3{Float64}}:\n",
-       " [-0.3535533845424652, 0.3535533845424652, 0.0]\n",
-       " [0.3535533845424652, -0.3535533845424652, 0.0]\n",
-       " [0.3535533845424652, -0.3535533845424652, 0.0]\n",
-       " [0.3535533845424652, 0.3535533845424652, 0.0]\n",
-       " [0.3535533845424652, 0.3535533845424652, 0.0]\n",
-       " [0.3535533845424652, 0.3535533845424652, 0.0]\n",
-       " [-0.3535533845424652, -0.3535533845424652, 0.0]\n",
-       " [-0.3535533845424652, -0.3535533845424652, 0.0]\n",
-       " [-0.3535533845424652, 0.3535533845424652, 0.0]\n",
-       " [0.3535533845424652, 0.3535533845424652, 0.0]\n",
-       " ⋮\n",
-       " [0.3535533845424652, 0.3535533845424652, 0.0]\n",
-       " [0.3535533845424652, -0.3535533845424652, 0.0]\n",
-       " [-0.3535533845424652, -0.3535533845424652, 0.0]\n",
-       " [0.3535533845424652, -0.3535533845424652, 0.0]\n",
-       " [-0.3535533845424652, -0.3535533845424652, 0.0]\n",
-       " [-0.3535533845424652, -0.3535533845424652, 0.0]\n",
-       " [-0.3535533845424652, 0.3535533845424652, 0.0]\n",
-       " [0.3535533845424652, -0.3535533845424652, 0.0]\n",
-       " [0.3535533845424652, -0.3535533845424652, 0.0]"
+       "create_random_config (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -464,7 +295,64 @@
     }
    ],
    "source": [
-    "spin_conf = [(C.L/2) * Vec3f(i) for i in μ_hat_rand]"
+    "function create_random_config(C::Par)\n",
+    "\n",
+    "    # individual spin vectors grouped in \"cells\" of 4\n",
+    "    spin_1 = [cos(C.β), -sin(C.β), 0]\n",
+    "    spin_2 = [cos(C.β), cos(C.β), 0]\n",
+    "    spin_3, spin_4 = spin_2, spin_1\n",
+    "\n",
+    "    # number of columns in the lattice (it is also a # of spins per side)\n",
+    "    columns = 2C.N\n",
+    "    \n",
+    "    μ_hat_rand = Vector{Float64}[]\n",
+    "\n",
+    "    for col = 1:columns\n",
+    "        spins = isodd(col) ? [spin_1 *rand([1,-1]) , spin_2 *rand([1,-1])] : [spin_3 *rand([1,-1]), spin_4 *rand([1,-1])]\n",
+    "        append!(μ_hat_rand, repeat(spins, C.N))\n",
+    "    end\n",
+    "\n",
+    "    return μ_hat_rand\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "36-element Vector{Vector{Float64}}:\n",
+       " [0.7071067811865476, -0.7071067811865475, 0.0]\n",
+       " [-0.7071067811865476, -0.7071067811865476, -0.0]\n",
+       " [0.7071067811865476, -0.7071067811865475, 0.0]\n",
+       " [-0.7071067811865476, -0.7071067811865476, -0.0]\n",
+       " [0.7071067811865476, -0.7071067811865475, 0.0]\n",
+       " [-0.7071067811865476, -0.7071067811865476, -0.0]\n",
+       " [-0.7071067811865476, -0.7071067811865476, -0.0]\n",
+       " [0.7071067811865476, -0.7071067811865475, 0.0]\n",
+       " [-0.7071067811865476, -0.7071067811865476, -0.0]\n",
+       " [0.7071067811865476, -0.7071067811865475, 0.0]\n",
+       " ⋮\n",
+       " [-0.7071067811865476, -0.7071067811865476, -0.0]\n",
+       " [-0.7071067811865476, 0.7071067811865475, -0.0]\n",
+       " [-0.7071067811865476, -0.7071067811865476, -0.0]\n",
+       " [-0.7071067811865476, -0.7071067811865476, -0.0]\n",
+       " [-0.7071067811865476, 0.7071067811865475, -0.0]\n",
+       " [-0.7071067811865476, -0.7071067811865476, -0.0]\n",
+       " [-0.7071067811865476, 0.7071067811865475, -0.0]\n",
+       " [-0.7071067811865476, -0.7071067811865476, -0.0]\n",
+       " [-0.7071067811865476, 0.7071067811865475, -0.0]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "μ_hat_rand = create_random_config(C)"
    ]
   },
   {
@@ -476,21 +364,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "function plot_spins(C::Par)\n",
     "\n",
     "    spin_centers = get_spin_centers(C)\n",
-    "    μ_hat_rand = create_random_config(C)\n",
     "    μ_hat = create_T2_config(C)\n",
+    "    #μ_hat_rand = create_random_config(C)\n",
     "\n",
-    "    spins_per_side = (C.N + 1) * 2\n",
+    "    spins_per_side = 2C.N\n",
     "    num_spins = spins_per_side^2\n",
     "\n",
     "    spin_center = [Point3f(i) for i in spin_centers] \n",
-    "    spin_conf = [(C.L/2) * Vec3f(i) for i in μ_hat_rand]\n",
+    "    spin_conf = [(C.L/2) * Vec3f(i) for i in μ_hat]\n",
+    "    #spin_conf = [(C.L/2) * Vec3f(i) for i in μ_hat_rand]\n",
     "\n",
     "    fig = Figure(resolution=(720, 720), dpi=600)\n",
     "    ax = Axis3(fig[1,1], aspect=:data, perspectiveness=0.7)\n",
@@ -506,7 +395,8 @@
     "    hidedecorations!(ax)\n",
     "    hidespines!(ax)\n",
     "\n",
-    "    save(\"$(num_spins)_randConfig_spins3D.png\", fig)\n",
+    "    save(\"$(num_spins)_orderedConfig_spins3D.png\", fig)\n",
+    "    # save(\"$(num_spins)_randConfig_spins3D.png\", fig)\n",
     "\n",
     "    return fig\n",
     "end\n",
